# nonstd-lite-project

./: .tgitconfig  README.md
cmake/consumer/: CMakeLists.txt
cmake/consumer/script/: build.bat
cmake/consumer/src/: consumer.cpp
cmake/producer/: CMakeLists.txt
cmake/producer/cmake/: producer-lite-config.cmake.in
cmake/producer/include/producer/: producer.hpp
cmake/producer/script/: build-install.bat
cmake/producer/test/: CMakeLists.txt  producer.t.cpp
cmake/script/: producer-consumer.bat
file/: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
file/.github/workflows/: ci.yml
file/example/: CMakeLists.txt
file/script/: update-version.py  upload-conan.py
file/test/: CMakeLists.txt  t.bat  tc-cl.bat  tc.bat  tg.bat
file/test/nonstd/: {xxx}.tweak.hpp
link/: 01-kanbanflow-license-bsl.url  02-kanbanflow-std-version.url  03-kanbanflow-prj-version.url
plan/: 01-plan-license-bsl.txt  02-plan-std-version.txt  03-plan-prj-version.txt  04-plan-force-use.txt  05-plan-compiler-features.txt  06-plan-build-attr-ext-vis.txt  07-plan-build-appveyor.txt  07-plan-build-batch.txt  08-plan-build-cmake.txt  09-plan-build-appveyor.txt  10-plan-build-travis.txt  11-plan-compile-no-exceptions.txt  12-plan-document-to-c++-standard.txt  13-plan-package-conan.txt  14-plan-add-tweak-header.txt
project/CodeBlocks/: cmake.cbp  nonstd-lite.workspace  plan.cbp
test/: combine-any-exp-opt-var.cpp  combine-exp-std-any-opt-var.cpp
